# 401-python-data-visualization

./: README.md  pyproject.toml  viz-a.ipynb  viz-b.ipynb
reference_stuff/: exercise.ipynb  tips.ipynb
